Paragrafo no linux

--- a/site-no git/index.html
+++ b/site-no git/index.html
@@ -10,6 +10,8 @@
     <h1>Aprendendo</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum hic, corporis dolores inventore ex, ad quas aperiam consequatur rem laudantium ratione iste distinctio nesciunt quasi totam id odio minima veritatis?</p>
+
+    <p>Adicionei um paragrafo pelo Git ou Github no linux</p>
     
 </body>
 </html>
