--- a/site-no git/index.html
+++ b/site-no git/index.html
@@ -12,6 +12,8 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum hic, corporis dolores inventore ex, ad quas aperiam consequatur rem laudantium ratione iste distinctio nesciunt quasi totam id odio minima veritatis?</p>
 
     <p>Adicionei um paragrafo pelo Git ou Github no linux</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci veritatis, quae corrupti ad eos quibusdam sit ab dignissimos beatae explicabo. Illo recusandae quis nobis. Adipisci provident ratione temporibus reprehenderit saepe?</p>
     
 </body>
 </html>
