--- a/site-no git/index.html
+++ b/site-no git/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Primeiro site em repositório</title>
 </head>
 <body>
+    <main>
+        <header>
+            <h1>Título do Site</h1>
+        </header>
+        <article>
+            <h2>Artigo 001</h2>
+            <p>Texto artigo 001</p>
+        </article>
+
+        <article>
+            <h2>Artigo 002</h2>
+            <p>Texto artigo 002</p>
+        </article>
+    </main>
     <h1>Aprendendo</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum hic, corporis dolores inventore ex, ad quas aperiam consequatur rem laudantium ratione iste distinctio nesciunt quasi totam id odio minima veritatis?</p>
